load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/Kevionte/prysm_beacon/v2/api/client/validator",
    visibility = ["//visibility:public"],
    deps = [
        "//api/client:go_default_library",
        "//validator/rpc:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
