load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["utils.go"],
    importpath = "github.com/Kevionte/prysm_beacon/v2testing/bls/utils",
    visibility = ["//testing/bls:__subpackages__"],
    deps = [
        "//io/file:go_default_library",
        "//testing/require:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
