load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["policies.go"],
    importpath = "github.com/Kevionte/prysm_beacon/v5/testing/endtoend/policies",
    visibility = ["//visibility:public"],
    deps = ["//consensus-types/primitives:go_default_library"],
)
