load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["coverage.go"],
    importpath = "github.com/Kevionte/prysm_beacon/v5/beacon-chain/sync/backfill/coverage",
    visibility = ["//visibility:public"],
    deps = ["//consensus-types/primitives:go_default_library"],
)
