load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/Kevionte/prysm_beacon/v1beacon-chain/sync/initial-sync/testing",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
)
